--- a/DotnetFinancialTrackerApp/DotnetFinancialTrackerApp.csproj
+++ b/DotnetFinancialTrackerApp/DotnetFinancialTrackerApp.csproj
@@ -1,7 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
+        <!-- Set EnableiOSTarget to true when the iOS workload is installed locally. -->
+        <EnableiOSTarget>false</EnableiOSTarget>
+        <TargetFrameworks>net8.0-android;net8.0-maccatalyst</TargetFrameworks>
+        <TargetFrameworks Condition="'$(EnableiOSTarget)' == 'true'">$(TargetFrameworks);net8.0-ios</TargetFrameworks>
         <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
         <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
         <!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
