--- a/DotnetFinancialTrackerApp.Tests/DotnetFinancialTrackerApp.Tests.csproj
+++ b/DotnetFinancialTrackerApp.Tests/DotnetFinancialTrackerApp.Tests.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -20,4 +21,3 @@
   </ItemGroup>
 
 </Project>
-
