--- a/DotnetFinancialTrackerApp/Properties/launchSettings.json
+++ b/DotnetFinancialTrackerApp/Properties/launchSettings.json
@@ -3,6 +3,11 @@
     "Windows Machine": {
       "commandName": "MsixPackage",
       "nativeDebugging": false
+    },
+    "Windows (Unpackaged)": {
+      "commandName": "Project",
+      "nativeDebugging": false,
+      "commandLineArgs": "--framework net8.0-windows10.0.19041.0"
     }
   }
 }
