--- a/DotnetFinancialTrackerApp/DotnetFinancialTrackerApp.csproj
+++ b/DotnetFinancialTrackerApp/DotnetFinancialTrackerApp.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-        <!-- Set EnableiOSTarget to true when the iOS workload is installed locally. -->
-        <EnableiOSTarget>false</EnableiOSTarget>
-        <TargetFrameworks>net8.0-maccatalyst;net8.0-windows</TargetFrameworks>
-        <TargetFrameworks Condition="'$(EnableiOSTarget)' == 'true'">$(TargetFrameworks);net8.0-ios</TargetFrameworks>
-        <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
-        <!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
+        <!-- Default: Windows-first for Visual Studio compatibility -->
+        <TargetFrameworks>net8.0-windows10.0.19041.0</TargetFrameworks>
+
+        <!-- Multi-platform support when explicitly requested -->
+        <TargetFrameworks Condition="'$(MultiPlatform)' == 'true'">net8.0-windows10.0.19041.0;net8.0-maccatalyst</TargetFrameworks>
+        <TargetFrameworks Condition="'$(MacOnly)' == 'true'">net8.0-maccatalyst</TargetFrameworks>
 
         <!-- Note for MacCatalyst:
             The default runtime is maccatalyst-x64, except in Release config, in which case the default is maccatalyst-x64;maccatalyst-arm64.
@@ -35,17 +35,18 @@
 
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
-        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">7.0</SupportedOSPlatformVersion>
-
-        <!-- Simplified Windows settings - no packaging required -->
-        <WindowsPackageType Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">None</WindowsPackageType>
-        <WindowsAppSDKSelfContained Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">true</WindowsAppSDKSelfContained>
-        <UseWinUI Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">true</UseWinUI>
+        <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
+        <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
     </PropertyGroup>
 
-    <!-- Spec requires Windows + Mac build support; keep Windows TF but skip it when building on non-Windows host -->
-    <PropertyGroup Condition="'$(IsWindows)' != 'true'">
+    <!-- Enable building on non-Windows hosts by filtering target frameworks -->
+    <PropertyGroup Condition="'$(OS)' != 'Windows_NT'">
         <TargetFrameworks>net8.0-maccatalyst</TargetFrameworks>
+    </PropertyGroup>
+
+    <!-- Ensure Windows has a valid framework when using Visual Studio -->
+    <PropertyGroup Condition="'$(OS)' == 'Windows_NT' AND '$(TargetFrameworks)' == ''">
+        <TargetFrameworks>net8.0-windows10.0.19041.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -76,5 +77,6 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.10" />
     </ItemGroup>
+
 
 </Project>
