--- a/DotnetFinancialTrackerApp/DotnetFinancialTrackerApp.csproj
+++ b/DotnetFinancialTrackerApp/DotnetFinancialTrackerApp.csproj
@@ -78,5 +78,9 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.10" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Platforms\Assignment2_Report.pdf" />
+    </ItemGroup>
+
 
 </Project>
